create: added footer markup

--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
         <div class="social articles__card articles__card_social">
           <h2 class="social__title">Наши соцсети</h2>
           <div class="social-wrapper">
-            <a href="#" class="social__link"><img src="img/articles/facebook.svg" alt="Иконка" class="social__icon"></a>
-            <a href="#" class="social__link"><img src="img/articles/twitter.svg" alt="Иконка" class="social__icon"></a>
-            <a href="#" class="social__link"><img src="img/articles/youtube.svg" alt="Иконка" class="social__icon"></a>
+            <a href="#" class="social__link"><img src="img/facebook.svg" alt="Иконка" class="social__icon"></a>
+            <a href="#" class="social__link"><img src="img/twitter.svg" alt="Иконка" class="social__icon"></a>
+            <a href="#" class="social__link"><img src="img/youtube.svg" alt="Иконка" class="social__icon"></a>
           </div>
         </div>
       </div>
@@ -445,9 +445,8 @@
   <section class="other-articles">
     <div class="container">
       <div class="other-articles__wrapper">
-        <div class="photo">
           <!-- Slider main container -->
-          <div class="swiper-container photo-slider photo__slider">
+          <div class="swiper-container photo-slider">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -467,26 +466,26 @@
                 <img src="img/news/photo-large-4.png" alt="Фото" class="photo-slider__image">
               </div>
             </div>
-          </div>
-          <!-- If we need pagination -->
-          <div class="photo__pagination"></div>
-          <div class="photo-slider__wrapper">
-            <div class="photo-slider__text">
-              <div class="photo-slider__profile">
-                <img src="img/other-articles/avatar.png" alt="Аватар" class="photo-slider__avatar">
-                <span class="photo-slider__username">Оксана Пушкина</span>
-                <span class="photo-slider__subtitle">Фотограф</span>
+            <!-- If we need pagination -->
+            <div class="photo-slider__pagination"></div>
+            <div class="photo-slider__wrapper">
+              <div class="photo-slider__text">
+                <div class="photo-slider__profile">
+                  <img src="img/other-articles/avatar.png" alt="Аватар" class="photo-slider__avatar">
+                  <span class="photo-slider__username">Оксана Пушкина</span>
+                  <span class="photo-slider__subtitle">Фотограф</span>
+                </div>
+                <h2 class="photo-slider__title">Выбор читателей: где удобнее работать фрилансеру</h2>
+                <button class="button photo-slider__button">
+                  <img src="img/other-articles/Images.svg" alt="Иконка" class="photo-slider__icon">
+                  <span class="photo-slider__button-text">Смотреть фото</span>
+                  <span class="photo-slider__button-text photo-slider__button-text_numbers">26</span>
+                </button>
               </div>
-              <h2 class="photo-slider__title">Выбор читателей: где удобнее работать фрилансеру</h2>
-              <button class="button photo-slider__button">
-                <img src="img/other-articles/Images.svg" alt="Иконка" class="photo-slider__icon">
-                <span class="photo-slider__button-text">Смотреть фото</span>
-                <span class="photo-slider__button-text photo-slider__button-text_numbers">26</span>
-              </button>
+              <span class="photo-slider__label">Горячее</span>
             </div>
           </div>
-          <span class="photo-slider__label">Горячее</span>
-        </div>
+
         <div class="other-articles__cards">
           <div class="other-articles__card">
             <div class="other-articles__card-text">
@@ -517,6 +516,95 @@
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="container">
+      <h2 class="footer__title">Подпишитесь на нашу рассылку</h2>
+      <form action="#" class="footer__form">
+        <input type="email" class="footer__input" placeholder="Email">
+        <button class="button footer__button">
+          <span class="footer__button-text">Подписаться</span>
+        </button>
+      </form>
+      <div class="footer-grid">
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Новости</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Обновления</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Экспресс</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Politics</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Solar Eclipse</a></li>
+          </ul>
+        </div>
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Статьи</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">HTML</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">CSS</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">JavaScript</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Web Design</a></li>
+          </ul>
+        </div>
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Видеоуроки</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Скринкасты</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Уроки</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Вебинары</a></li>
+          </ul>
+        </div>
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Курсы</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Платные интенсивы</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Бесплатные стримы</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Мастер-классы</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Менторство</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Буткемпы</a></li>
+          </ul>
+        </div>
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Информация</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Политика данных</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Оферта сайта</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Реквизиты</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="footer-grid__wrapper">
+          <h3 class="footer-grid__title">Категории</h3>
+          <ul class="footer-grid__ul">
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Популярное</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Горячее</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Подборки</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Мнения</a></li>
+            <li class="footer-grid__item"><a href="#" class="footer-grid__link">Карьера</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-links">
+        <img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo">
+        <ul class="footer-links__ul">
+          <li class="footer-links__item"><a href="#" class="footer-links__link">Контакты</a></li>
+          <li class="footer-links__item"><a href="#" class="footer-links__link">Работа у нас</a></li>
+          <li class="footer-links__item"><a href="#" class="footer-links__link">Реклама</a></li>
+          <li class="footer-links__item"><a href="#" class="footer-links__link">Партнерство</a></li>
+        </ul>
+        <div class="footer-links__social">
+          <a href="#" class="footer-links__social-link"><img src="img/facebook.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="#" class="footer-links__social-link"><img src="img/twitter.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="#" class="footer-links__social-link"><img src="img/youtube.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="#" class="footer-links__social-link"><img src="img/inst.svg" alt="" class="footer-links__social-icon"></a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p class="footer-bottom__description">Universal — это онлайн издание, в котором мы публикуем полезные материалы о веб разработке: статьи, новости, видеоуроки,
+        подборки, ссылки и курсы. Материалы на сайте бесплатны, но при копировании, указывайте ссылку.</p>
+        <span class="footer-bottom__copy">&copy; 2020 Universal Magazine</span>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/swiper-bundle.min.js"></script>
