--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="header">
     <div class="container">
       <div class="header-nav">
-        <a href="#" class="header__logo">
+        <a href="/index.html" class="header__logo">
           <img src="img/header/main-logo.svg" alt="Universal" class="header-nav__logo">
         </a>
         <div class="header__wrapper header__wrapper_mobile">
@@ -586,7 +586,7 @@
         </div>
       </div>
       <div class="footer-links">
-        <a href="#" class="footer-links__link"><img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo"></a>
+        <a href="/index.html" class="footer-links__link"><img src="img/footer/footer-logo.svg" alt="Логотип" class="footer-links__logo"></a>
         <ul class="footer-links__ul">
           <li class="footer-links__item"><a href="#" class="footer-links__link">Контакты</a></li>
           <li class="footer-links__item"><a href="#" class="footer-links__link">Работа у нас</a></li>
@@ -594,10 +594,10 @@
           <li class="footer-links__item"><a href="#" class="footer-links__link">Партнерство</a></li>
         </ul>
         <div class="footer-links__social">
-          <a href="#" class="footer-links__social-link"><img src="img/facebook.svg" alt="" class="footer-links__social-icon"></a>
-          <a href="#" class="footer-links__social-link"><img src="img/twitter.svg" alt="" class="footer-links__social-icon"></a>
-          <a href="#" class="footer-links__social-link"><img src="img/youtube.svg" alt="" class="footer-links__social-icon"></a>
-          <a href="#" class="footer-links__social-link"><img src="img/inst.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="https://www.facebook.com" target="blank" class="footer-links__social-link"><img src="img/facebook.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="https://twitter.com/?lang=ru" target="blank" class="footer-links__social-link"><img src="img/twitter.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="https://www.youtube.com/?gl=RU&hl=ru" target="blank" class="footer-links__social-link"><img src="img/youtube.svg" alt="" class="footer-links__social-icon"></a>
+          <a href="https://www.instagram.com/?hl=ru" target="blank" class="footer-links__social-link"><img src="img/inst.svg" alt="" class="footer-links__social-icon"></a>
         </div>
       </div>
       <div class="footer-bottom">
