create: article and style

--- a/article.html
+++ b/article.html
@@ -94,7 +94,164 @@
     </div>
   </main>
 
-  
+  <article class="article">
+    <div class="atricle-container">
+      <div class="article__wrapper article__wrapper_first">
+        <p class="article__text article__text_first">М Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития.</p>
+        <div class="article__profile">
+          <img src="img/article/author.png" alt="" class="article__profile-image">
+          <span class="article__profile-name">Мира Стахова</span>
+          <span class="article__profile-subtitle">Фрилансер</span>
+          <span class="article__profile-articles">82 статьи</span>
+          <a href="#" class="article__profile-button">Страница автора</a>
+        </div>
+      </div>
+      <div class="article__wrapper">
+        <p class="article__text article__text_mb-45">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в
+          формировании дальнейших
+          направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+          обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития.</p>
+      </div>
+      <div class="article__wrapper">
+        <h2 class="article__title">Введение НПД в РФ</h2>
+        <p class="article__text">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+        обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации</p>
+        <p class="article__text">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна,</p>
+        <p class="article__text article__text_mb-58">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+        обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации</p>
+      </div>
+    </div>
+      <div class="container">
+        <!-- Slider main container -->
+        <div class="swiper-container article-slider">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide article-slider__item">
+              <img src="img/article/slider-photo.png" alt="Фото" class="article-slider__image">
+              <div class="article-slider__bottom">
+                <div class="article-slider__bottom-text">Geostatistics deal with quantitative data analysis, specifically the
+                  application of statistical methodology</div>
+                <div class="article-slider__bottom-profile">
+                  <img src="img/article/photograph.png" alt="Фотограф" class="article-slider__bottom-img">
+                  <div class="article-slider__bottom-photograph">
+                    <span class="article-slider__bottom-name">Андрей Вашигаев</span>
+                    <span class="article-slider__bottom-subtitle">Фотограф</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide article-slider__item">
+              <img src="img/article/slider-photo-2.jpg" alt="Фото" class="article-slider__image">
+              <div class="article-slider__bottom">
+                <div class="article-slider__bottom-text">Geostatistics deal with quantitative data analysis, specifically the
+                  application of statistical methodology</div>
+                <div class="article-slider__bottom-profile">
+                  <img src="img/article/photograph.png" alt="Фотограф" class="article-slider__bottom-img">
+                  <div class="article-slider__bottom-photograph">
+                    <span class="article-slider__bottom-name">Андрей Вашигаев</span>
+                    <span class="article-slider__bottom-subtitle">Фотограф</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide article-slider__item">
+              <img src="img/article/slider-photo-3.jpg" alt="Фото" class="article-slider__image">
+              <div class="article-slider__bottom">
+                <div class="article-slider__bottom-text">Geostatistics deal with quantitative data analysis, specifically the
+                  application of statistical methodology</div>
+                <div class="article-slider__bottom-profile">
+                  <img src="img/article/photograph.png" alt="Фотограф" class="article-slider__bottom-img">
+                  <div class="article-slider__bottom-photograph">
+                    <span class="article-slider__bottom-name">Андрей Вашигаев</span>
+                    <span class="article-slider__bottom-subtitle">Фотограф</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+          <!-- If we need navigation buttons -->
+          <button class="article-slider__button article-slider__button_prev"></button>
+          <button class="article-slider__button article-slider__button_next"></button>
+        
+        </div>
+      </div>
+    <div class="atricle-container">
+      <div class="article__wrapper article__wrapper_bottom">
+        <p class="article__text">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+        обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития.</p>
+        <p class="article__text">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+        обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации</p>
+        <p class="article__text article__text_mb-15">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
+        направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
+        обеспечение нашей деятельности влечет за собой процесс внедрения и модернизации дальнейших направлений развития. Таким
+        образом консультация с широким активом способствует подготовки и реализации направлений</p>
+        <div class="article__card">
+          <h2 class="article__card-title">Материал по теме</h2>
+          <img src="img/article/card-photo.png" alt="Жираф" class="article__card-image">
+          <h3 class="article__card-subtitle">20+ инструментов для js-разработчика</h3>
+          <p class="article__card-description">Узнайте, какими инструментами вы еще не пользовались, а могли бы. Эти инструменты помогут вам ускорить свою работу или
+          повысить ее качество. Все инструменты собраны в виде...</p>
+          <div class="article__card-bottom">
+            <img src="img/article/Eye.svg" alt="Иконка" class="article__card-bottom-icon">
+            <span class="numbers article__card-bottom-numbers">1,623</span>
+            <img src="img/articles/Comment.svg" alt="Иконка" class="article__card-bottom-icon">
+            <span class="numbers article__card-bottom-numbers">102</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="atricle-container atricle-container_last">
+      <div class="article__title-wrapper">
+        <img src="img/article/Quote.svg" alt="Иконка" class="article__title-icon">
+        <cite>
+          <p class="article__title">Таким образом консультация с широким активом способствует подготовки и реализации направлений прогрессивного развития.
+          Не следует, однако забывать, что новая модель организационной деятельности в значительной степени обуславливает.</p>
+        </cite>
+      </div>
+      <p class="article__text">Таким образом консультация с широким активом способствует подготовки и реализации направлений прогрессивного развития.
+      Не следует, однако забывать, что новая модель организационной деятельности в значительной степени обуславливает создание
+      модели развития. Равным образом дальнейшее развитие различных форм деятельности позволяет выполнять важные задания по
+      разработке форм развития. Разнообразный и богатый опыт постоянный количественный</p>
+      <p class="article__text article__text_mb-15">
+        Задача организации, в особенности же консультация с широким активом требуют от нас анализа новых предложений.
+        Повседневная практика показывает, что постоянный количественный рост и сфера нашей
+      </p>
+      <div class="article__tags">
+        <button class="article__tags-button"><span class="article__tags-button-text">Travel</span></button>
+        <button class="article__tags-button"><span class="article__tags-button-text">Destinations</span></button>
+        <button class="article__tags-button"><span class="article__tags-button-text">Nature</span></button>
+        <button class="article__tags-button"><span class="article__tags-button-text">World</span></button>
+        <button class="article__tags-button"><span class="article__tags-button-text">Alaska</span></button>
+      </div>
+      <div class="article__repost">
+        <h2 class="article__repost-title">Поддержите репостом</h2>
+        <div class="article__buttons">
+          <button class="button article__repost-button">
+            <img src="img/article/Heart.svg" alt="Иконка" class="article__repost-icon">
+            <span class="article__repost-text">Like it</span>
+            <span class="article__repost-numbers article__repost-numbers_red">42</span>
+          </button>
+          <button class="button article__repost-button">
+            <img src="img/article/Facebook.svg" alt="Иконка" class="article__repost-icon">
+            <span class="article__repost-text">Share</span>
+            <span class="article__repost-numbers">80</span>
+          </button>
+          <button class="button article__repost-button">
+            <img src="img/article/Twitter.svg" alt="Иконка" class="article__repost-icon">
+            <span class="article__repost-text">Tweet</span>
+            <span class="article__repost-numbers article__repost-numbers_light">33</span>
+          </button>
+        </div>
+      </div>
+      </div>
+  </article>
 
   <footer class="footer">
     <div class="container">
