create: added responsive for article

--- a/article.html
+++ b/article.html
@@ -55,7 +55,7 @@
           <div class="main-display__top">
             <span class="main-display__subtitle">Новости</span>
             <div class="main-display__links">
-              <a href="#" class="main-display__link main-display__link_home">
+              <a href="/universal" class="main-display__link main-display__link_home">
                 <img src="img/main/Home.svg" alt="Иконка: на главную" class="main-display__icon main-display__icon_home">
                 <span class="main-display__link-text">На главную</span>
               </a>
@@ -95,7 +95,7 @@
   </main>
 
   <article class="article">
-    <div class="atricle-container">
+    <div class="article-container">
       <div class="article__wrapper article__wrapper_first">
         <p class="article__text article__text_first">М Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших направлений развития.</p>
         <div class="article__profile">
@@ -180,7 +180,7 @@
         
         </div>
       </div>
-    <div class="atricle-container">
+    <div class="article-container">
       <div class="article__wrapper article__wrapper_bottom">
         <p class="article__text">Идейные соображения высшего порядка, а также рамки и место обучения кадров играет важную роль в формировании дальнейших
         направлений развития. Значимость этих проблем настолько очевидна, что&nbsp;постоянное информационно-пропагандистское
@@ -207,7 +207,7 @@
         </div>
       </div>
     </div>
-    <div class="atricle-container atricle-container_last">
+    <div class="article-container article-container_last">
       <div class="article__title-wrapper">
         <img src="img/article/Quote.svg" alt="Иконка" class="article__title-icon">
         <cite>
