create: added href to links in main-info section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <span class="main-info__subtitle">JavaScript</span>
               <h1 class="main-info__title">Расширение Chrome защищает от атак</h1>
             </div>
-            <a href="#" class="button main-info__button">
+            <a href="/article.html" class="button main-info__button">
               <span class="button__text">Читать далее</span>
               <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
             </a>
@@ -74,7 +74,7 @@
         </div>
         <div id="javascript" class="main-info__left">
           <img src="img/news/photo-large-1.png" alt="#" class="main-info__image">
-          <a href="#" class="main-info__profile">
+          <a href="/article.html" class="main-info__profile">
             <img src="img/main/user-avatar.png" alt="Давид Гуров" class="main-info__avatar">
             <div class="main-info__user">
               <span class="main-info__username">Давид Гуров</span>
@@ -94,7 +94,7 @@
         </div>
         <div id="html" class="main-info__left">
           <img src="img/news/photo-large-2.png" alt="#" class="main-info__image">
-          <a href="#" class="main-info__profile">
+          <a href="/article.html" class="main-info__profile">
             <img src="img/main/user-avatar.png" alt="Давид Гуров" class="main-info__avatar">
             <div class="main-info__user">
               <span class="main-info__username">Давид Гуров</span>
@@ -106,7 +106,7 @@
               <span class="main-info__subtitle">JavaScript</span>
               <h1 class="main-info__title">Расширение Yandex защищает от атак</h1>
             </div>
-            <a href="#" class="button main-info__button">
+            <a href="/article.html" class="button main-info__button">
               <span class="button__text">Читать далее</span>
               <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
             </a>
@@ -126,7 +126,7 @@
               <span class="main-info__subtitle">JavaScript</span>
               <h1 class="main-info__title">Расширение Opera защищает от атак</h1>
             </div>
-            <a href="#" class="button main-info__button">
+            <a href="/article.html" class="button main-info__button">
               <span class="button__text">Читать далее</span>
               <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
             </a>
@@ -146,7 +146,7 @@
               <span class="main-info__subtitle">JavaScript</span>
               <h1 class="main-info__title">Расширение Edge защищает от атак</h1>
             </div>
-            <a href="#" class="button main-info__button">
+            <a href="/article.html" class="button main-info__button">
               <span class="button__text">Читать далее</span>
               <img src="img/Button-Arrow.svg" alt="Иконка: стрелка" class="button__arrow">
             </a>
