create: more-cards section and responsive

--- a/article.html
+++ b/article.html
@@ -251,9 +251,50 @@
       </div>
   </article>
 
-  <section class="cards">
+  <section class="more-cards">
     <div class="container">
-      <div class="cards__wrapper"></div>
+      <div class="more-cards__wrapper">
+        <div class="more-cards__card">
+          <img src="img/more-cards/1.png" alt="Фото" class="more-cards__img">
+          <h2 class="more-cards__title"><a href="#" class="more-cards__link">Техника работы по помидоркам — это как?</a></h2>
+          <div class="more-cards__bottom">
+            <img src="img/article/Eye.svg" alt="Иконка" class="more-cards__bottom-icon">
+            <span class="numbers more-cards__bottom-numbers">1,904</span>
+            <a href="#" class="more-cards__link"><img src="img/articles/Comment.svg" alt="Иконка" class="more-cards__bottom-icon"></a>
+            <span class="numbers more-cards__bottom-numbers">82</span>
+          </div>
+        </div>
+        <div class="more-cards__card">
+          <img src="img/more-cards/2.png" alt="Фото" class="more-cards__img">
+          <h2 class="more-cards__title"><a href="#" class="more-cards__link">Вопросы на собеседовании для джуна</a></h2>
+          <div class="more-cards__bottom">
+            <img src="img/article/Eye.svg" alt="Иконка" class="more-cards__bottom-icon">
+            <span class="numbers more-cards__bottom-numbers">2,873</span>
+            <a href="#" class="more-cards__link"><img src="img/articles/Comment.svg" alt="Иконка" class="more-cards__bottom-icon"></a>
+            <span class="numbers more-cards__bottom-numbers">982</span>
+          </div>
+        </div>
+        <div class="more-cards__card">
+          <img src="img/more-cards/3.png" alt="Фото" class="more-cards__img">
+          <h2 class="more-cards__title"><a href="#" class="more-cards__link">Список стран, куда можно улететь</a></h2>
+          <div class="more-cards__bottom">
+            <img src="img/article/Eye.svg" alt="Иконка" class="more-cards__bottom-icon">
+            <span class="numbers more-cards__bottom-numbers">821</span>
+            <a href="#" class="more-cards__link"><img src="img/articles/Comment.svg" alt="Иконка" class="more-cards__bottom-icon"></a>
+            <span class="numbers more-cards__bottom-numbers">30</span>
+          </div>
+        </div>
+        <div class="more-cards__card">
+          <img src="img/more-cards/4.png" alt="Фото" class="more-cards__img">
+          <h2 class="more-cards__title"><a href="#" class="more-cards__link">В вашем портфолио могут быть фейковые работы</a></h2>
+          <div class="more-cards__bottom">
+            <img src="img/article/Eye.svg" alt="Иконка" class="more-cards__bottom-icon">
+            <span class="numbers more-cards__bottom-numbers">5,030</span>
+            <a href="#" class="more-cards__link"><img src="img/articles/Comment.svg" alt="Иконка" class="more-cards__bottom-icon"></a>
+            <span class="numbers more-cards__bottom-numbers">495</span>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
