create: comment block and style

--- a/article.html
+++ b/article.html
@@ -409,6 +409,15 @@
         </div>
         <button class="comments-button comments__button-bottom"><img src="img/comments/Loading.svg" alt="Иконка" class="comments__button-icon">загрузить еще</button>
       </div>
+      <div class="comment-block">
+        <img src="img/comments/avatar.png" alt="Аватар" class="comment-block__avatar">
+        <form action="#" class="comment-block__form">
+          <h2 class="comment-block__form-title">Что вы думаете на этот счет?</h2>
+          <img src="img/comments/Shape.svg" alt="Поле ввода" class="comment-block__form-bg">
+          <textarea name="message" class="comment-block__form-message" minlength="100" required></textarea>
+          <button class="button comment-block__form-button">Отправить <img src="img/main/Arrow-1.svg" alt="Иконка" class="comment-block__form-icon"></button>
+        </form>
+      </div>
     </div>
   </section>
 
