create: added responsive for comments section

--- a/article.html
+++ b/article.html
@@ -413,7 +413,7 @@
         <img src="img/comments/avatar.png" alt="Аватар" class="comment-block__avatar">
         <form action="#" class="comment-block__form">
           <h2 class="comment-block__form-title">Что вы думаете на этот счет?</h2>
-          <img src="img/comments/Shape.svg" alt="Поле ввода" class="comment-block__form-bg">
+          <img src="img/comments/Shape.png" alt="Поле ввода" class="comment-block__form-bg">
           <textarea name="message" class="comment-block__form-message" minlength="100" required></textarea>
           <button class="button comment-block__form-button">Отправить <img src="img/main/Arrow-1.svg" alt="Иконка" class="comment-block__form-icon"></button>
         </form>
